# Python

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  convert-exercicios.py  coverage.xml  menu.py  meu_pacote_python-1.0.8-py3-none-any.whl  meu_pacote_python-1.0.9-py3-none-any.whl  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.bkp  setup.py  test_all.py
.github/: pull_request_template.md  python-test.yml  release-drafter.yml
.github/workflows/: pre-commit.yml  publish.yml  python-ci.yml  python-test.yml  release-drafter.yml
Mundo01/Desafios/01/: 01.py
Mundo01/Desafios/02/: 02.py
Mundo01/Desafios/03/: 03.py
Mundo01/Desafios/04/: 04.py
Mundo01/Desafios/05/: 05.py
Mundo01/Desafios/06/: 06.py
Mundo01/Desafios/07/: 07.py
Mundo01/Desafios/08/: 08.py
Mundo01/Desafios/09/: 09.py
Mundo01/Desafios/10/: 10.py
Mundo01/Desafios/11/: 11.py
Mundo01/Desafios/12/: 12.py
Mundo01/Desafios/13/: 13.py
Mundo01/Desafios/14/: 14.py
Mundo01/Desafios/15/: 15.py
Mundo01/Desafios/16/: 16.py
Mundo01/Desafios/17/: 17.py
Mundo01/Desafios/18/: 18.py
Mundo01/Desafios/19/: 19.py
Mundo01/Desafios/20/: 20.py
Mundo01/Desafios/21/: 21.py
Mundo01/Desafios/22/: 22.py
Mundo01/Desafios/23/: 23.py
Mundo01/Desafios/24/: 24.py
Mundo01/Desafios/25/: 25.py
Mundo01/Desafios/27/: 27.py
Mundo01/Desafios/28/: 28.py
Mundo01/Desafios/29/: 29.py
Mundo01/Desafios/30/: 30.py
Mundo01/Desafios/31/: 31.py
Mundo01/Desafios/32/: 32.py
Mundo01/Desafios/33/: 33.py
Mundo01/Desafios/34/: 34.py
Mundo01/Desafios/35/: 35.py
Mundo01/Exercicios/: ex002.py  ex003.py  ex004.py  ex005.py  ex006.py  ex007.py  ex008.py  ex009.py  ex010.py  ex011.py  ex012.py  ex013.py  ex014.py  ex015.py  ex016.py  ex017.py  ex018.py  ex019.py  ex020.py  ex021.py  ex024.py  ex025.py  ex026.py  ex027.py  ex028.py  ex029.py  ex030.py  ex031.py  ex032.py  ex033.py  ex034.py  ex035.py
Mundo02/Aulas/: aula12.py
Mundo02/Exercicio/: ex036.py  ex037.py  ex038.py  ex039.py  ex040.py  ex041.py  ex042.py  ex043.py  ex044.py  ex045.py  ex046.py
dblink/: dblink_list.csv  find-dblink-DML.py  find-dblink.py
whl-inspect/meu_pacote_python-1.0.8.dist-info/: METADATA  RECORD
