[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
exclude = '''
/(
    /home/runner/work/Python/Python/Mundo01/Desafios/34/34.py
    /home/runner/work/Python/Python/Mundo01/Exercicios/ex033.py
    /home/runner/work/Python/Python/Mundo01/Exercicios/ex034.py
)/
'''

[project]
name = "meu_pacote_python"
version = "1.0.8"  # OBRIGATÓRIO
authors = [
    {name = "Igor Pompeo", email = "pompbass@gmail.com"},
]
description = "Exercicios de Python - Curso em Video"
readme = {file = "README.md", content-type = "text/markdown", encoding = "utf-8"}
requires-python = ">=3.8"
license = "MIT"  # Nova sintaxe SPDX
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
]
dynamic = ["scripts", "optional-dependencies"]

[project.urls]
Homepage = "https://github.com/igorpompeo/Python"
