[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meu_pacote_python"
version = "1.0.9"
authors = [
    {name = "Igor Pompeo", email = "pompbass@gmail.com"},
]
description = "Exercícios de Python - Curso em Vídeo"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}  # ✅ CORRETO para evitar depreciação
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colorama>=0.4.0",
    "emoji>=2.0.0",
    "requests>=2.25.0"
]

[project.optional-dependencies]
games = ["pygame>=2.0.0"]
dev = ["flake8", "black", "pytest", "coverage"]

[project.urls]
Homepage = "https://github.com/igorpompeo/Python"

[tool.setuptools.packages.find]
include = ["Mundo01*", "Mundo02*"]

[tool.black]
line-length = 88
exclude = '''
/(
    /home/runner/work/Python/Python/Mundo01/Desafios/34/34.py
    | /home/runner/work/Python/Python/Mundo01/Exercicios/ex033.py
    | /home/runner/work/Python/Python/Mundo01/Exercicios/ex034.py
)/
'''
