[metadata]
name = meu_pacote_python
version = 1.0.8
author = Igor Pompeo
author_email = pompbass@gmail.com
description = Exercicios de Python - Curso em Video
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorpompeo/Python
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8

[flake8]
max-line-length = 88
exclude = .git,__pycache__,build,dist,.venv

[isort]
profile = black
line_length = 88
skip = .venv

[tool:pytest]
addopts = -ra -q
